Security: Hide all hidden directories behind a 404.
Never use access denied for these.
Whether they exist or not, a 404 should be returned.

--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,9 @@ RewriteEngine on
 ErrorDocument 403 /access_denied.html
 ErrorDocument 404 /not_found.html
 
+RewriteBase "/"
+RewriteRule (^\.|/\.) /not_found.html [L]
+
 RewriteCond %{REQUEST_FILENAME} -f
 RewriteRule . - [L]
 
